--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "@storybook/react": "^6.1.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
+    "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rollup": "^2.35.1",
     "semantic-release": "^17.3.1",
+    "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   }
 }
