--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "design-system-config",
   "version": "1.0.0",
   "description": "design system config example",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "rimraf ./dist && npm run build:esm && npm run build:types",
+    "build:esm": "BABEL_ENV=esm babel src --extensions .ts,.tsx -d dist/esm --source-maps",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types"
   },
   "repository": {
     "type": "git",
@@ -30,6 +35,10 @@
     "@types/react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
@@ -42,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "autoprefixer": "^10.1.0",
+    "babel-plugin-lodash": "^3.3.4",
     "cssnano": "^4.1.10",
     "eslint": "^7.16.0",
     "eslint-plugin-import": "^2.22.1",
@@ -50,6 +60,7 @@
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
     "semantic-release": "^17.3.1",
     "tailwindcss": "^2.0.2",
