--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "test": "test",
+    "build:rollup": "rimraf ./dist && rollup -c ./scripts/rollup/rollup.config.js && npm run build:types2",
     "build": "rimraf ./dist && npm run build:esm && npm run build:types",
     "build:esm": "BABEL_ENV=esm babel src --extensions .ts,.tsx -d dist/esm --source-maps",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types"
+    "build:cjs": "BABEL_ENV=cjs babel src --extensions .ts,.tsx -d dist/cjs --source-maps",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types",
+    "build:types2": "tsc --emitDeclarationOnly --declaration --declarationDir dist2/types"
   },
   "repository": {
     "type": "git",
@@ -37,9 +40,11 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -62,8 +67,13 @@
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "semantic-release": "^17.3.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
   }
 }
