--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "test": "test",
-    "build:rollup": "rimraf ./dist && rollup -c ./scripts/rollup/rollup.config.js && npm run build:types2",
+    "build:rollup": "rimraf ./dist2 && rollup -c ./scripts/rollup/rollup.config.js && npm run build:types2",
     "build": "rimraf ./dist && npm run build:esm && npm run build:types",
     "build:esm": "BABEL_ENV=esm babel src --extensions .ts,.tsx -d dist/esm --source-maps",
     "build:cjs": "BABEL_ENV=cjs babel src --extensions .ts,.tsx -d dist/cjs --source-maps",
@@ -69,11 +69,13 @@
     "rollup": "^2.35.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
     "semantic-release": "^17.3.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5"
+    "@babel/runtime": "^7.12.5",
+    "react-spring": "^8.0.27"
   }
 }
