--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@soyoung210/design-system-config",
+  "name": "design-system-config",
   "version": "1.1.0",
   "description": "design system config example",
   "main": "dist/cjs/index.js",
