--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@soyoung210/design-system-config",
   "version": "1.1.2",
   "description": "design system config example",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@soyoung210"
+  },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
